Bug 569528 - Make <p> not close implicitly across a <button> on stack. rs=jonas, a=blocking2.0-final.